<resources>
    <string name="app_name">MyNanterre</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="nav_header_title">MyNanterre</string>
    <string name="nav_header_subtitle">contact.mynanterre2@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_profil">test</string>
    <string name="clubs">Clubs</string>
    <string name="accueil">Accueil</string>
    <string name="crous">Crous</string>
    <string name="plan">Plan</string>
    <string name="train">Train</string>
    <string name="mise_jour">Mise à jour</string>
    <string name="biblioth_que">Bibliothèque</string>
    <string name="textview">TextView</string>
    <string name="support">Support</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">hello</string>
</resources>
