<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/accueil" />
        <item
            android:id="@+id/nav_actu"
            android:icon="@drawable/actu"
            android:title="Fil d'actualité" />
        <item
            android:id="@+id/nav_clubs"
            android:icon="@drawable/clubs"
            android:title="@string/clubs" />
        <item
            android:id="@+id/nav_crous"
            android:icon="@drawable/crous"
            android:title="@string/crous" />
        <item
            android:id="@+id/nav_bu"
            android:icon="@drawable/bu"
            android:title="@string/biblioth_que" />
        <item
            android:id="@+id/nav_train"
            android:icon="@drawable/train"
            android:title="@string/train" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/plan"
            android:title="@string/plan" />
        <item
            android:id="@+id/nav_maj"
            android:icon="@drawable/maj"
            android:title="@string/mise_jour" />
        <item
            android:title="@string/support"
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support" />
        <item
            android:title="Connexion"
            android:id="@+id/nav_connexion"
            android:icon="@drawable/ic_support">
        </item>
    </group>
</menu>
